2009-12-04  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.Net.dll.sources: Adjust location for
	DnsEndPoint

2009-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.Net.dll.sources: Remove Timer_2_1.cs and 
	related classes from System.dll - they are not required anymore
	since Gonzalo's changes on Socket.Close(int)

2009-09-27  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.Net.dll.sources: Add Timer_2_1.cs and 
	related classes from System.dll

2009-09-24  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.Net.dll.sources: Substitute System.dll Dns
	implementation for a ML specific version.

2009-08-17  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.Net.dll.sources: Add some existing System.dll
	files required for SL3 and some new files.

2009-07-20  Jb Evain  <jbevain@novell.com>

	* Makefile: filter the valid profile on the framework version,
	to make it easier to have custom variants.

2009-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.dll.sources: Remove extra files not needed to
	compile System.Net (and cut the tuning time too)
	* DummySystemNet.cs: Remove. Not needed anymore.

2009-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.dll.sources: Remove the common Const, Locale and 
	MonoTODOAttribute since we can now get them from mscorlib.dll.
	Remove all System/System.Net.NetworkInformation/* types since
	Socket does not depend on them anymore.
	* DummySystemNet.cs: Add a dummy System.Net.NetworkInformation
	namespace to please compilers.

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Net.dll.sources: Remove some unneeded files for the
	build. Add the SL2 specific enums, instead of using the existing
	ones from System.dll. Include Socket_2_1.cs (from System) and use
	the AssemblyInfo.cs for this assembly

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>
