@@ -2,7 +2,6 @@ Assembly/AssemblyInfo.cs
 System.Net/Dns_2_1.cs
 System.Net/HttpWebRequest_2_1.cs
 System.Net/HttpWebResponse_2_1.cs
-System.Net/HttpStatusCode_2_1.cs
 System.Net/WebExceptionStatus_2_1.cs
 System.Net/WebHeaderCollection_2_1.cs
 System.Net/WebClient_2_1.cs
@@ -25,6 +24,7 @@ System.Net.NetworkInformation/NetworkInterface_2_1.cs
 ../System/System.Net/EndPoint.cs
 ../System/System.Net/HttpRequestHeader.cs
 ../System/System.Net/HttpResponseHeader.cs
+../System/System.Net/HttpStatusCode.cs
 ../System/System.Net/ICredentialLookup.cs
 ../System/System.Net/IPAddress.cs
 ../System/System.Net/IPEndPoint.cs
