@@ -1,3 +1,7 @@
+2009-12-04  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* net_2_1_raw_System.Net.dll.sources: Remove HttpStatusCode_2_1.cs
+
 2009-12-04  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* net_2_1_raw_System.Net.dll.sources: Adjust location for
